--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "normalizr",
+  "name": "@drivetribe/normalizr",
   "version": "3.0.2",
   "description": "Normalizes JSON according to schema for Redux and Flux applications",
   "bugs": {
